[package]
name = "optical-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-sync = { version = "0.1.0", features = [
    "defmt"
] }
embassy-executor = { version = "0.1.0", features = [
    "defmt", 
    "integrated-timers"
    ] }
embassy-time = { version = "0.1.0", features = [
    "defmt", 
    "defmt-timestamp-uptime", 
    "unstable-traits", 
    "tick-hz-32_768"
    ] }
embassy-stm32 = { version = "0.1.0", features = [
    "nightly", 
    "unstable-traits", 
    "defmt",
    "stm32f429zi", 
    "unstable-pac", 
    "memory-x", 
    "time-driver-any", 
    "exti"
]  }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
#nb = "1.0.0"
#static_cell = "1.0"

[profile.dev]
opt-level = 3

[profile.release]
debug = true
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "opticalflow"
test = false
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
embassy-sync = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
embassy-time = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
embassy-stm32 = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
embassy-futures = { git = "https://github.com/SSL-A-Team/embassy", branch = "master" }
