[package]
name = "optical-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.3"

embassy-executor = { version = "0.6.3", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-32768",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f429zi",
    "unstable-pac",
    "memory-x",
    "time-driver-tim4",
    "exti",
    "chrono"
] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.1" }

static_cell = "2.1.0"
futures-util = { version = "0.3.30", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = "1.1.1"
heapless = { version = "0.8", default-features = false }
const_format = "0.2.30"
libm = "0.2.6"
nalgebra = { version = "0.32.2", default-features = false, features = [
        "libm",
        "macros",
] }

ateam-lib-stm32 = { path = "../lib-stm32", default-features = false  }
ateam-common-packets = { path = "../software-communication/ateam-common-packets/rust-lib" }
credentials = { path = "../credentials" }

[features]
default = []
no-private-credentials = ["credentials/no-private-credentials"]

[dev-dependencies]
defmt-test = "0.3.0"

[profile.dev]
opt-level = 3
lto = 'fat'
debug-assertions = false

[profile.release]
debug = true
opt-level = 3
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "opticalflow"
test = false
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy"}
embassy-time = { git = "https://github.com/embassy-rs/embassy"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy"}