[package]
name = "ateam-power-board"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SSL-A-Team/firmware"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.4.0", features = [
    "defmt",
    "stm32g030c8",
    "unstable-pac", 
    "time-driver-tim1",
    "exti",
] }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.7.2" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

futures-util = { version = "0.3.31", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
critical-section = "1.2.0"
const_format = "0.2.34"

ateam-lib-stm32 = { path = "../lib-stm32", default-features = false }
ateam-common-packets = { path = "../software-communication/ateam-common-packets/rust-lib" }

smart-leds = "0.4.0"

[dev-dependencies]
defmt-test = "0.4.0"

[profile.dev]
opt-level = 3
lto = 'fat'
debug-assertions = false

[profile.release]
debug = true
lto = 'fat'

[lib]
test = false
harness = false

[[bin]]
name = "power"
test = false
harness = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy"}
embassy-time = { git = "https://github.com/embassy-rs/embassy"}
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy"}