[package]
name = "stspin"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
nb = "1.0.0"

[dependencies.stm32f0]
version = "0.14.0"
# features = ["rt", "stm32f031"]

[dependencies.stm32f0xx-hal]
version = "0.18.0"
features = ["rt", "stm32f031"]